# finanzas-email-tracker

./: .dockerignore  .editorconfig  .env.example  .env.railway.example  .gitignore  CATEGORIAS_SUGERIDAS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  FASE0_ESTADOS_CUENTA.md  FASE_3_PROGRESO.md  GUIA_INGRESOS.md  GUIA_PRUEBA.md  GUIA_PRUEBA_PERFILES.md  GUIA_PRUEBA_RAPIDA.md  LICENSE  MEJORAS_PENDIENTES.md  Makefile  PLAN_IMPLEMENTACION.md  PROXIMOS_PASOS.md  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  claude_desktop_config.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  ruff.toml  test_parser_quick.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 123e1ab89fe0_add_onboarding_fields_to_profile.py  1ff0b1791621_add_transaction_embeddings_table.py  256a23c3cec4_initial_clean_schema.py  2a1d446b3a68_increase_tipo_especial_field_size.py  2ebba5c4f9b2_initial_schema_with_all_models.py  3ac35fbeb15b_add_patrimonio_models.py  564c3e57cf7d_add_fk_to_patrimonio_and_reconciliation.py  88802a30080f_add_sync_metadata_to_profile.py  8e1de369a884_add_es_tentativa_to_transactions.py  91d86299896d_add_ambiguous_merchant_fields.py  a052c6fc5837_add_unique_constraint_to_profile_email_.py  a1b2c3d4e5f6_add_smart_learning_ml_tables.py  alert001_add_card_fields_for_alerts.py  b580073c8e12_add_exchange_rate_cache_table.py  b8e4f7d92a31_add_tenant_id_and_pgvector_support.py  c7d4e5f6a1b2_add_accounts_table.py  d2914ec36654_add_reconciliation_and_patrimonio_.py  d8e9f0a1b2c3_add_merchants_income_splits_and_contexto.py  ded1ba313883_add_users_table.py  e69daeb1e3e7_add_billing_cycles_and_card_payments.py  e9c12d4be588_add_pending_questions_table.py  e9cec578b152_add_transfer_fields_beneficiario_subtipo.py  e9f1a2b3c4d5_add_anomaly_detection_fields.py  f0a1b2c3d4e5_add_subscriptions_table.py  f7a8b9c0d1e2_add_learning_tables.py  g1h2i3j4k5l6_add_goal_enhancements_and_milestones.py  h2i3j4k5l6m7_add_onboarding_progress_table.py  perf001_add_performance_indexes.py  recon001_add_bank_statements_table.py  (+1 more)
data/: README.md  test_output.json  test_statement.txt
docs/: 01-GUIA-ESTRATEGICA-SEBAS.md  02-GUIA-IMPLEMENTACION-AI-PARTE1.md  02-GUIA-IMPLEMENTACION-AI-PARTE2.md  ANALISIS_PROFUNDO_PROYECTO.md  ARCHITECTURE.md  ARQUITECTURA_CATEGORIZACION_PRODUCCION.md  CARD_MANAGEMENT_ARCHITECTURE.md  FLUJO_COMPLETO.md  GUIA_IMPLEMENTACION_APRENDIZAJE.md  HONEST_ANALYSIS.md  ONBOARDING_PDF_RECONCILIATION.md  PDF_RECONCILIATION.md  PLAN_IMPLEMENTACION.md  PROGRESS.md  PROJECT_STATUS_COMPLETE.md  RAG_TESTING_SUMMARY.md  SMART_LEARNING_SYSTEM.md  STATUS.md  SYNC_STRATEGY_ANALYSIS.md  VISION.md  _archive_plan_finanzas_tracker_v2.md
scripts/: analyze_bac_emails.py  analyze_failed_emails.py  analyze_pago_emails.py  apply_alerts_migration.py  apply_subscription_migration.py  auto_categorizar.py  corregir_categorias.py  create_comprehensive_test_data.py  create_test_data_for_alerts.py  deep_analysis_historical.py  detect_subscriptions.py  fetch_all_bac_emails.py  fetch_emails.py  fetch_sinpe_details.py  fetch_transfer_details.py  fix_existing_transactions.py  full_bac_analysis.py  import_historical_data.py  init_db.sql  init_project.py  logout.py  manage_income.py  migrate_db.py  migrate_token_cache.py  performance_report.py  process_transactions.py  quick_balance.py  review_transactions.py  run_alert_engine.py  seed_test_data.py  setup_user.py  simple_test_data.py  simulate_new_user.py  test_alert_engine_minimal.py  train_anomaly_detector.py  train_learning_system.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  (+2 more)
(+256 files in other folders)
